[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/quiz_controller.gd" type="Script" id=1]
[ext_resource path="res://arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://NotoSansKR-VariableFont_wght.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 480.0
color = Color( 0.380392, 0.811765, 0.843137, 1 )

[node name="Level1Button" type="Button" parent="Control"]
margin_left = 172.0
margin_top = 128.0
margin_right = 317.0
margin_bottom = 157.0
rect_scale = Vector2( 2, 2 )
custom_colors/icon_color_pressed = Color( 0.8, 0.145098, 0.145098, 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "LVL.1 Consonents 01"
icon_align = 1

[node name="Level2Button" type="Button" parent="Control"]
margin_left = 174.0
margin_top = 206.0
margin_right = 319.0
margin_bottom = 235.0
rect_scale = Vector2( 2, 2 )
custom_colors/icon_color_pressed = Color( 0.8, 0.145098, 0.145098, 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "LVL.2 Consonents 02"

[node name="Level3Button" type="Button" parent="Control"]
margin_left = 174.0
margin_top = 285.0
margin_right = 320.0
margin_bottom = 314.0
rect_scale = Vector2( 2, 2 )
custom_colors/icon_color_pressed = Color( 0.8, 0.145098, 0.145098, 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "LVL.3 Vowels 01"

[node name="Level4Button" type="Button" parent="Control"]
margin_left = 174.0
margin_top = 362.0
margin_right = 320.0
margin_bottom = 391.0
rect_scale = Vector2( 2, 2 )
custom_colors/icon_color_pressed = Color( 0.8, 0.145098, 0.145098, 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
text = "LVL.4 MatchUp"

[node name="TitleLabel" type="Label" parent="Control"]
modulate = Color( 1, 0, 0.309804, 1 )
margin_left = 8.0
margin_top = 52.0
margin_right = 635.0
margin_bottom = 107.0
custom_fonts/font = SubResource( 1 )
text = "Hanguel!"
align = 1
valign = 1

[node name="QuizContainer" type="VBoxContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 640.0
margin_bottom = 480.0
custom_constants/separation = 14
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/QuizContainer"]
margin_top = 38.0
margin_right = 640.0
margin_bottom = 52.0
alignment = 1

[node name="ScoreLabel" type="Label" parent="Control/QuizContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 318.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.219608, 0.105882, 0.164706, 1 )
align = 1
valign = 1

[node name="LivesLabel" type="Label" parent="Control/QuizContainer/HBoxContainer"]
margin_left = 322.0
margin_right = 322.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.219608, 0.105882, 0.164706, 1 )
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="Control/QuizContainer"]
margin_top = 66.0
margin_right = 640.0
margin_bottom = 90.0

[node name="QuestionLabel" type="Label" parent="Control/QuizContainer/MarginContainer"]
margin_right = 640.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.219608, 0.105882, 0.164706, 1 )
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Control/QuizContainer"]
margin_top = 104.0
margin_right = 640.0
margin_bottom = 172.0
alignment = 1

[node name="Option1" type="Button" parent="Control/QuizContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 20.0
icon_align = 1

[node name="Option2" type="Button" parent="Control/QuizContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 640.0
margin_bottom = 44.0

[node name="Option3" type="Button" parent="Control/QuizContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 640.0
margin_bottom = 68.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/QuizContainer"]
visible = false
margin_top = 257.0
margin_right = 640.0
margin_bottom = 271.0

[node name="ProgressBar" type="ProgressBar" parent="Control/QuizContainer/MarginContainer2"]
visible = false
margin_right = 640.0
margin_bottom = 14.0

[node name="LineEdit" type="LineEdit" parent="Control/QuizContainer"]
visible = false
margin_top = 126.0
margin_right = 640.0
margin_bottom = 150.0
text = "type here"
align = 1

[node name="NextButton" type="Button" parent="Control/QuizContainer"]
margin_top = 186.0
margin_right = 640.0
margin_bottom = 206.0
custom_colors/font_color_disabled = Color( 0, 0.996078, 0.270588, 1 )
text = "Next"

[node name="FeedbackLabel" type="Label" parent="Control/QuizContainer"]
margin_top = 220.0
margin_right = 640.0
margin_bottom = 234.0

[node name="ExplanationLabel" type="Label" parent="Control/QuizContainer"]
margin_top = 248.0
margin_right = 640.0
margin_bottom = 262.0

[node name="GridContainer" type="GridContainer" parent="Control/QuizContainer"]
margin_top = 276.0
margin_right = 640.0
margin_bottom = 442.0
columns = 2

[node name="MatchButton1" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_right = 222.0
margin_bottom = 30.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton2" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_left = 226.0
margin_right = 448.0
margin_bottom = 30.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton3" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_top = 34.0
margin_right = 222.0
margin_bottom = 64.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton4" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_left = 226.0
margin_top = 34.0
margin_right = 448.0
margin_bottom = 64.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton5" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_top = 68.0
margin_right = 222.0
margin_bottom = 98.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton6" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_left = 226.0
margin_top = 68.0
margin_right = 448.0
margin_bottom = 98.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton7" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_top = 102.0
margin_right = 222.0
margin_bottom = 132.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton8" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_left = 226.0
margin_top = 102.0
margin_right = 448.0
margin_bottom = 132.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton9" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_top = 136.0
margin_right = 222.0
margin_bottom = 166.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[node name="MatchButton10" type="Button" parent="Control/QuizContainer/GridContainer"]
margin_left = 226.0
margin_top = 136.0
margin_right = 448.0
margin_bottom = 166.0
rect_min_size = Vector2( 222, 0 )
custom_fonts/font = SubResource( 3 )

[connection signal="pressed" from="Control/Level1Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Level2Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Level3Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/Level4Button" to="Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Control/QuizContainer/VBoxContainer/Option1" to="Control" method="_on_Option1_pressed"]
[connection signal="pressed" from="Control/QuizContainer/VBoxContainer/Option2" to="Control" method="_on_Option2_pressed"]
[connection signal="pressed" from="Control/QuizContainer/VBoxContainer/Option3" to="Control" method="_on_Option3_pressed"]
